--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,8 @@
         "iostream": "cpp",
         "iosfwd": "cpp",
         "iomanip": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "fstream": "cpp"
     }, // 效果效果比cpptools要好
     "files.autoSave": "onWindowChange",
 }
