--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
     "code-runner.executorMap": {
         //"c": "cd $dir && clang $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=i686-w64-mingw -std=c11 && $dir$fileNameWithoutExt",
         "c": "cd $dir && clang $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=x86_64-w64-mingw32 -std=c11 && $dir$fileNameWithoutExt",
-        //"cpp": "cd $dir && clang++ $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=i686-w64-mingw -std=c++17 && $dir$fileNameWithoutExt"
-        "cpp": "cd $dir && clang++ $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=x86_64-w64-mingw32 -std=c++17 && $dir$fileNameWithoutExt"
+        "cpp": "cd $dir && clang++ $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=i686-w64-mingw -std=c++17 && $dir$fileNameWithoutExt"
+        //"cpp": "cd $dir && clang++ $fileName -o $fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -fcolor-diagnostics --target=x86_64-w64-mingw32 -std=c++17 && $dir$fileNameWithoutExt"
         }, // 设置code runner的命令行
     "code-runner.saveFileBeforeRun": true, // run code前保存
     "code-runner.preserveFocus": true, // 若为false，run code后光标会聚焦到终端上。如果需要频繁输入数据可设为false
@@ -18,14 +18,14 @@
     "C_Cpp.autocomplete": "Disabled", // 因为有clang的补全，所以关掉
 
     "clang.cflags": [ // 控制c语言静态检测的参数
-        "--target=x86_64-w64-mingw32",
-        //"--target=i686-w64-mingw",
+        //"--target=x86_64-w64-mingw32",
+        "--target=i686-w64-mingw",
         "-std=c11",
         "-Wall"
     ],
     "clang.cxxflags": [ // 控制c++静态检测时的参数
-        "--target=x86_64-w64-mingw32",
-        //"--target=i686-w64-mingw",
+        //"--target=x86_64-w64-mingw32",
+        "--target=i686-w64-mingw",
         "-std=c++17",
         "-Wall"
     ],
@@ -38,7 +38,8 @@
         "iosfwd": "cpp",
         "iomanip": "cpp",
         "cmath": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "ostream": "cpp"
     }, // 效果效果比cpptools要好
     "files.autoSave": "onWindowChange",
 }
