--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,7 +39,8 @@
         "iomanip": "cpp",
         "cmath": "cpp",
         "fstream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cstdio": "cpp"
     }, // 效果效果比cpptools要好
     "files.autoSave": "onWindowChange",
 }
